# DAI-grpc-protos

./: CMakeLists.txt  behavior_recognition.proto  image_harmony.proto  image_renderer.proto  service_coordinator.proto  target_detection.proto  target_tracking.proto
